src/Sulu/Bundle/AdminBundle/Resources/js/components/Input/input.scss
@import '../../containers/Application/colors.scss';

$inputBorderColor: $silver;
$inputErrorBorderColor: $persianRed;
$inputBorderWidth: 1px;
$inputBorderRadius: 3px;
$inputHeight: 30px;
$inputColor: $black;
$inputFontSize: 12px;
$iconColor: $dustyGray;
$iconBorderPadding: 5px;
$placeholderColor: $dustyGray;
$backgroundColor: $white;

.input {
    border: $inputBorderWidth solid $inputBorderColor;
    border-radius: $inputBorderRadius;
    display: inline-flex;
    align-items: center;
    height: $inputHeight;
    width: 100%;
    background-color: $backgroundColor;

    input {
        width: 100%;
        flex-grow: 1;
        border: none;
        border-radius: $inputBorderRadius;
        line-height: calc($inputHeight - 2 * $inputBorderWidth);
        height: calc($inputHeight - 2 * $inputBorderWidth);
        padding-left: 10px;
        font-size: $inputFontSize;
        color: $inputColor;

        &::placeholder {
            color: $placeholderColor;
            font-size: $inputFontSize;
        }
    }

    &.error {
        border-color: $inputErrorBorderColor;
    }
}

.prepended-container {
    position: relative;
    flex: 0 0 34px;
    height: calc($inputHeight - 2 * $iconBorderPadding);
    box-shadow: $inputBorderWidth 0 0 $inputBorderColor;
    display: flex;
    justify-content: center;
    align-items: center;
}

.icon {
    display: block;
    font-size: 14px;
    flex-grow: 0;
    color: $iconColor;
    padding: 0 10px;
    border-right: $inputBorderWidth solid $inputBorderColor;
    line-height: calc($inputHeight - 2 * $iconBorderPadding);
}

.icon-clickable {
    cursor: pointer;
}

